force-app/main/default/objects/Record_view_navigation_attributes__mdt/Record_view_navigation_attributes__mdt.object-meta.xml
<CustomObject>
    <description>Specifiy object API name, column name for record Id and column name for record name.</description>
    <label>Record view navigation attributes</label>
    <pluralLabel>Record view navigation attributes</pluralLabel>
</CustomObject>