force-app/main/default/objects/Record_view_navigation_attributes__mdt/fields/Column_field_name__c.field-meta.xml
<CustomField>
    <fullName>Column_field_name__c</fullName>
    <label>Column field name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>