force-app/main/default/objects/Record_view_navigation_attributes__mdt/fields/Icon_name__c.field-meta.xml
<CustomField>
    <fullName>Icon_name__c</fullName>
    <description>Name of the icon to use as link (see lightning-icon documentation)</description>
    <inlineHelpText>Name of the icon to use as link (see lightning-icon documentation)</inlineHelpText>
    <label>Icon name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>