force-app/main/default/objects/Record_view_navigation_attributes__mdt/fields/Id_column_field_name__c.field-meta.xml
<CustomField>
    <fullName>Id_column_field_name__c</fullName>
    <description>Has to be the same as the Column_field_name on Account_datatable_settings, used to create clickable record link in table.</description>
    <inlineHelpText>Has to be the same as the Column_field_name on Account_datatable_settings, used to create clickable record link in table.</inlineHelpText>
    <label>Id column field name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>