force-app/main/default/objects/Record_view_navigation_attributes__mdt/fields/Name_column_field_name__c.field-meta.xml
<CustomField>
    <fullName>Name_column_field_name__c</fullName>
    <description>Has to be the same as the Column_field_name on Account_datatable_settings, used to create clickable record link in table.</description>
    <inlineHelpText>Has to be the same as the Column_field_name on Account_datatable_settings, used to create clickable record link in table.</inlineHelpText>
    <label>Name column field name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>