force-app/main/default/objects/Record_view_navigation_attributes__mdt/fields/Name_field_api_name__c.field-meta.xml
<CustomField>
    <fullName>Name_field_api_name__c</fullName>
    <label>Name field api name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>