force-app/main/default/objects/Record_view_navigation_attributes__mdt/fields/Object_api_name__c.field-meta.xml
<CustomField>
    <fullName>Object_api_name__c</fullName>
    <label>Object api name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>