force-app/main/default/objects/Record_view_navigation_attributes__mdt/fields/Standard_label__c.field-meta.xml
<CustomField>
    <fullName>Standard_label__c</fullName>
    <label>Standard_label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>